--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <iframe
-      src="legaleas.streamlit.app"
+      src="https://legaleas.streamlit.app/"
       frameborder="0"
       marginheight="0"
       marginwidth="0"
